# evaepic

./: .gitignore  README.md
backend/: .env.example  .gitignore  CONFIGURATION_CHANGES.md  README.md  main.py  pyproject.toml  pytest.ini  setup.ps1  test_integration.py
backend/agents/: README.md  __init__.py  config.py  graph.py  objectextractor.py  relevantvendorevaluator.py  state.py
backend/agents/nodes/: IMPLEMENTATION_GUIDE.md  __init__.py  aggregator.py  database_fetcher.py  extractor.py  filter.py  negotiator.py  strategist.py  vendor_evaluator.py
backend/agents/prompts/: __init__.py
backend/agents/tools/: __init__.py
backend/agents/utils/: __init__.py  conversation_api.py  file_utils.py  vendor_api.py  webhook.py
backend/api/routers/: extract.py  negotiation.py
backend/models/: __init__.py  order.py  quote.py  vendor.py
backend/tests/: README.md  conftest.py  test_api_integration.py  test_graph_integration.py  verify_negotiation_agent.py  verify_propagation.py
backend/tests/agents/: __init__.py
backend/tests/agents/nodes/: __init__.py  test_vendor_evaluator.py
backend/tests/agents/utils/: __init__.py  test_vendor_api.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: layout.tsx  page.tsx
frontend/app/components/: Card.tsx  ChatInterface.tsx  FinalOrderFormModal.tsx  FloatingActionButton.tsx  Header.tsx  MainInputContainer.tsx  OrderFormModal.tsx  OrderInputBubble.tsx  OrderItemsList.tsx  OrderProgressUI.tsx  (+8 more)
frontend/types/: index.ts  order.ts  quote.ts  vendor.ts
(+19 files in other folders)
